# sprout-headless

./: .gitignore  AUTHENTICATION_UPDATE.md  INSTALL.md  MCP_README.md  README.md  TESTING_REPORT.md  apply_coa.py  claude_desktop_config.json  engie_hr_login.py  integration_test.py  mcp_config_example.json  mcp_requirements.txt  mcp_server.py  pyproject.toml  test_comprehensive.py  test_login.py  test_mcp_server.py
engie_hr_mcp/: __init__.py  __main__.py  server.py
