[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engie-hr-mcp"
version = "1.0.0"
description = "MCP Server for ENGIE HR Hub automation - provides tools for COA applications and time tracking"
authors = [
    { name = "ENGIE HR Automation", email = "automation@engie.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0"
]

[project.urls]
Homepage = "https://github.com/baraluga/sprout-headless"
Repository = "https://github.com/baraluga/sprout-headless"
Issues = "https://github.com/baraluga/sprout-headless/issues"

[project.scripts]
engie-hr-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "__pycache__*", "*.pyc"]